completed more problems

--- a/100_Numpy_exercises - wip.ipynb
+++ b/100_Numpy_exercises - wip.ipynb
@@ -614,10 +614,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.],\n",
+       "       [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = np.ones((5,5))\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 1. 1. 1. 1. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = np.pad(f, pad_width=1, mode='constant', constant_values=0)\n",
+    "print(f)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -650,10 +692,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0],\n",
+       "       [0, 2, 0, 0, 0],\n",
+       "       [0, 0, 3, 0, 0],\n",
+       "       [0, 0, 0, 4, 0]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g = np.diag(1+np.arange(4),k=-1)\n",
+    "g"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -664,10 +724,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = np.zeros((8,8), dtype = int)\n",
+    "\n",
+    "h[1::2,::2] = 1\n",
+    "h[::2,1::2] = 1\n",
+    "h"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -678,10 +762,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 5, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.unravel_index(99,(6,7,8)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -692,10 +786,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]\n",
+      " [0 1 0 1 0 1 0 1]\n",
+      " [1 0 1 0 1 0 1 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = np.tile (np.array([[0,1],[1,0]]), (4,4))\n",
+    "print(m)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -734,10 +846,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3. 3.]\n",
+      " [3. 3.]\n",
+      " [3. 3.]\n",
+      " [3. 3.]\n",
+      " [3. 3.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "multiplied_matrix = np.dot(np.ones((5,3)), np.ones((3,2)))\n",
+    "print(multiplied_matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
